--- a/src/app/clientsdocuments/clientsdocuments.component.html
+++ b/src/app/clientsdocuments/clientsdocuments.component.html
@@ -1,6 +1,8 @@
+
+
 <div>
     <div>
-        <span class="text-bold" style="font-size: 40px; font-weight: 600;">Papergrid</span><br>
+        <span class="text-bold" style="font-size: 40px; font-weight: 600;">{{companyName}}</span><br>
         <span class="" style="font-weight: lighter; font-size: 14px; ">116% Profile completion</span>
     </div>
     <div>
